Parches generales para integracion con Backend